Archive2/96/a7b19ef632f928/output
clang
OK
GCC
main.cpp: In member function 'void A<T>::f()':
main.cpp:8:27: error: there are no arguments to 'operator T' that depend on a template parameter, so a declaration of 'operator T' must be available [-fpermissive]
     void f() { operator T(); }
                           ^
main.cpp:8:27: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
FAIL
